--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -1,6 +1,7 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:vm="using:SensorList.ViewModels"
+        xmlns:views="using:SensorList.Views"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
@@ -12,5 +13,30 @@
     <Design.DataContext>
         <vm:MainWindowViewModel/>
     </Design.DataContext>
-
+    
+    <Border Padding="50">
+        <Grid RowDefinitions="*,*,8*">
+            <Border Grid.Row="0" Background="RoyalBlue">
+                <Label Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center">
+                    Sensor List
+                </Label>
+            </Border>
+            
+            <Grid Grid.Row="1" ColumnDefinitions="Auto,*">
+                <Button Grid.Column="0" Margin="5">Add item</Button>
+                <TextBox Grid.Column="1" Margin="5" Watermark="Search for item"/>
+            </Grid>
+            
+            <Border Grid.Row="2" Background="DarkGray">
+                <ListBox>
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <views:SensorItemView/>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                    abc
+                </ListBox>
+            </Border>
+        </Grid>
+    </Border>
 </Window>
