--- a/Views/SensorItemView.axaml
+++ b/Views/SensorItemView.axaml
@@ -2,15 +2,20 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:viewmodels="using:SensorList.ViewModels"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="SensorList.Views.SensorItemView">
     
     <StackPanel Margin="15">
+        <Design.DataContext>
+            <viewmodels:SensorItemViewModel/>
+        </Design.DataContext>
+        
         <Grid ColumnDefinitions="auto,*,auto,auto,auto">
-            <TextBlock Margin="5" VerticalAlignment="Center" Grid.Column="0">ID</TextBlock>
-            <TextBlock Margin="5" VerticalAlignment="Center" Grid.Column="1">Item name</TextBlock>
-            <TextBlock Margin="5" VerticalAlignment="Center" Grid.Column="2">Item category</TextBlock>
-            <TextBlock Margin="5" VerticalAlignment="Center" Grid.Column="3">Amount</TextBlock>
+            <TextBlock Text="{Binding Id}" Margin="5" VerticalAlignment="Center" Grid.Column="0"/>
+            <TextBlock Text="{Binding Name}" Margin="5" VerticalAlignment="Center" Grid.Column="1"/>
+            <TextBlock Text="{Binding Category}" Margin="5" VerticalAlignment="Center" Grid.Column="2"/>
+            <TextBlock Text="{Binding Amount}" Margin="5" VerticalAlignment="Center" Grid.Column="3"/>
             <Button Margin="5" VerticalAlignment="Center" Grid.Column="4" CornerRadius="10">Delete</Button>
         </Grid>
     </StackPanel>
