--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -15,22 +15,29 @@
         <vm:MainWindowViewModel/>
     </Design.DataContext>
     
+    <!-- TODO Add item-->
+    <!-- TODO Delete item-->
+    <!-- TODO Update item-->
+    <!-- TODO Search for item-->
+    
     <Border Padding="50">
         <Grid RowDefinitions="0.5*,*,8*">
+            <!-- Title Bar -->
             <Border Grid.Row="0" Background="DodgerBlue" CornerRadius="50">
                 <Label Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center">
                     Sensor List
                 </Label>
             </Border>
             
+            <!-- Utils Bar -->
             <Grid Grid.Row="1" ColumnDefinitions="Auto,*">
-                <Button Grid.Column="0" Background="DodgerBlue" Margin="5" CornerRadius="15">
-                    Add item
-                </Button>
+                <Button Grid.Column="0" Background="DodgerBlue" Margin="5" CornerRadius="15"
+                        Content="Add New Item" Command="{Binding AddNewItemCommand}"/>
                 <TextBox Grid.Column="1" Margin="15" CornerRadius="15"
                          Watermark="Search for item" Height="1"/>
             </Grid>
             
+            <!-- Item List -->
             <Border Grid.Row="2">
                 <ScrollViewer>
                     <ListBox Items="{Binding Sensors}" CornerRadius="20">
