--- a/Views/SensorItemView.axaml
+++ b/Views/SensorItemView.axaml
@@ -15,7 +15,10 @@
             <TextBlock Text="{Binding Id}" Margin="5" VerticalAlignment="Center" Grid.Column="0"/>
             <TextBlock Text="{Binding Name}" Margin="5" VerticalAlignment="Center" Grid.Column="1"/>
             <TextBlock Text="{Binding Category}" Margin="5" VerticalAlignment="Center" Grid.Column="2"/>
-            <TextBlock Text="{Binding Amount}" Margin="5" VerticalAlignment="Center" Grid.Column="3"/>
+            
+            <NumericUpDown Margin="5" VerticalAlignment="Center" Grid.Column="3"
+                           Value="{Binding Amount, Mode=TwoWay}" Minimum="0"/>
+            
             <Button Margin="5" VerticalAlignment="Center" Grid.Column="4" CornerRadius="10"
                     Content="Delete" Command="{Binding DeleteItemCommand}"/>
         </Grid>
