--- a/Views/CreateSensorView.axaml
+++ b/Views/CreateSensorView.axaml
@@ -2,14 +2,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:viewmodels="using:SensorList.ViewModels"
+             xmlns:viewModels="clr-namespace:SensorList.ViewModels"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="SensorList.Views.CreateSensorView">
     
-    <Grid Margin="10">
-        <Design.DataContext>
-            <viewmodels:CreateSensorViewModel/>
-        </Design.DataContext>
+    <Grid Margin="10"
+          x:DataType="viewModels:CreateSensorViewModel">
         
         <StackPanel Orientation="Vertical">
             <TextBlock Text="Name"/>
