--- a/Views/SensorItemView.axaml
+++ b/Views/SensorItemView.axaml
@@ -2,14 +2,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:viewmodels="using:SensorList.ViewModels"
+             xmlns:viewModels="clr-namespace:SensorList.ViewModels"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="SensorList.Views.SensorItemView">
     
-    <StackPanel Margin="15">
-        <Design.DataContext>
-            <viewmodels:SensorItemViewModel/>
-        </Design.DataContext>
+    <StackPanel Margin="15"
+                x:DataType="viewModels:SensorItemViewModel">
         
         <Grid ColumnDefinitions="auto,*,auto,auto,auto">
             <TextBlock Text="{Binding Id}" Margin="5" VerticalAlignment="Center" Grid.Column="0"/>
